# web_gymkhana_bot_server

./: .env  .env-non-dev  .gitignore  Dockerfile  README.md  Rabbit mg diagram.drawio  add_default_roles.py  alembic.ini  app.sh  config.py  docker-compose-local.yml  docker-compose.yml  env  env-example  fake.py  pyproject.toml  requirements.txt
.github/workflows/: build_for_test1.yml  check_github_env.yml  pytests.yml  upload_to_server.yml
alembic/: env.py
alembic/versions/: 2023_10_28_1556-6ed6166726a2_init_first_base.py  2023_10_30_1329-d7db53b0f238_add_bool.py  2023_11_02_0839-faa33b734f9f_bugfix.py  2023_11_02_0940-a84b4029eaf4_init_table_users_role.py  2023_11_16_1028-c2be6c48d5d8_large_string_in_role_name.py  2023_11_20_1306-a3c5ce8bf38b_add_sportclass.py  2023_12_08_1130-1001bfaaa493_pyright_email_indexes.py
docker/: app.sh
linter_config/: 2023_11_01_1435-c8f24bc08b8e_adding_pidoras.py
logger/: grafan-loki.md  log_conf.yml  logger.py  logger_config.py  test.py
logger/grafana/: promtail-config.yaml
src/: __init__.py  config.py  database.py  main.py  mongo_db.py  schemas.py
src/admin_panel/: views.py
src/auth/: auth.py  auth_config.py  manager.py  models.py  routers.py  schemas.py  utils.py
src/frontend/: .editorconfig  README.md  build.ps1  dockerfile  nginx.conf  run.ps1
src/frontend/static/css/: authorization.css  base.css  getusers.css  login.css  main-page.css  reg.css  registration.css
src/frontend/static/js/: Const.js  app-const.js  aurhorization.js  getusers.js  index.js  login.js  (+3 more)
src/frontend/templates/: authorization.html  base.html  getusers.html  grid.html  index.html  login.html  main-page.html  not_exist.html  reg.html  register.html  registration.html
src/pages/: register.html  routers.py
src/roles/: crud.py  dependecies.py  models.py  router.py  schemas.py  service.py
src/sport_classes/: crud.py  models.py  router.py  schemas.py
src/static/: reg.css  reg.js
src/static/css/: login.css
src/templates/: base.html  getusers.html  reg.html  register.css  register.html
src/users/: crud.py  dependencies.py  models.py  repository.py  router.py  router_role.py  router_user.py  routers.py  schemas.py  service.py
src/users/mongo/: crud.py  schemas.py  service.py
tests/: conftest.py  mock_roles.json  mock_sub_classes.json  mock_users.json  test_1.py  test_auth.py  test_role.py  test_user.py
tests/API_tests/: test_user.py
(+7 files in other folders)
