[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"

[tool.poetry]
name = "rabbitmg-server"
version = "0.1.0"
description = "Rabbit mg server for gymkhana bot settings"
authors = ["Dmitry Safonov <softik.d@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
alembic = "^1.12.1"
asyncpg = "^0.29.0"
gunicorn = "^21.2.0"
pydantic = "^2.5.1"
python-dotenv = "^1.0.0"
httpx = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
