[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"

[tool.poetry]
name = "rabbitmg-server"
version = "0.1.0"
description = "Rabbit mg server for gymkhana bot settings"
authors = ["Dmitry Safonov <softik.d@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
alembic = "^1.12.1"
asyncpg = "^0.29.0"
gunicorn = "^21.2.0"
pydantic = "^2.5.1"
python-dotenv = "^1.0.0"
httpx = "^0.25.1"
sqladmin = "^0.16.0"
uvicorn = "^0.24.0.post1"
python-logging-loki = "^0.3.1"
bcrypt = "^4.1.2"
pymongo = "^4.6.2"
motor = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
pyright = "^1.1.339"
pre-commit = "^3.5.0"
pytest-asyncio = "^0.21.1"
faker = "^22.5.1"


[build-system]
requires = ["poetry-core=1.7.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''
/venv/
/tests/
/alembic/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79


[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
pythonVersion = "3.10"
pythonPlatform = "Linux"

